Giraph Change Log

Release 0.2.0 - unreleased

  GIRAPH-166: add '*.patch' to list of files that Apache Rat ignores
  (ekoontz via aching).

  GIRAPH-167: mvn -Phadoop_non_secure clean verify fails (ekoontz via
  aching).

  GIRAPH-163: bin/giraph script overwrites CLASSPATH if "dev
  environment" detected (this also removes USER_JAR from CLASSPATH)
  (metaman via aching).

  GIRAPH-164: fix 5 "Line is longer than 80 characters" style errors
  in GiraphRunner (ekoontz via aching).

  GIRAPH-162: BspCase.setup() should catch FileNotFoundException
  thrown from org.apache.hadoop.fs.FileSystem.listStatus() (ekoontz
  via aching).

  GIRAPH-161: Handling null messages and edges when initializing
  IntIntNullIntVertex (dlogothetis via aching).

  GIRAPH-156: Users should be able to set simple 'custom arguments'
  via org.apache.giraph.GiraphRunner (ssc)

  GIRAPH-154: Worker ports are not synched properly with its peers
  (Zhiwei Gu via aching).

  GIRAPH-87: Simplify boolean expression in
  BspService::checkpointFrequencyMet (Eli Reisman via aching).

  GIRAPH-150: PageRankBenchmark accesses wrong conf after GiraphJob is
  created (aching).
 
  GIRAPH-40: Added checkstyle for enforcement of code conventions.
  All Giraph source files now pass checkstyle. (aching)

  GIRAPH-148: giraph-site.xml needs Apache header. (jghoman)
  
  GIRAPH-139: Change PageRankBenchmark to be accessible via bin/giraph. 
  (jghoman)
  
  GIRAPH-143: Add support for giraph to have a conf file. (jghoman)

  GIRAPH-142: _hadoopBsp should be prefixable via configuration. (jghoman)

  GIRAPH-145. Change partition request log level to debug rather than info.
  (jghoman)

  GIRAPH-130: Fix Javadoc warnings. (Harsh J. Chouraria via jghoman)

  GIRAPH-137: De-duplicate pagerank implementation in PageRankBenchmark.
  (Harsh J. Chouraria via jghoman) 
 
  GIRAPH-133: Typo in JavaDoc in BspCase::remove().
  (Harsh J. Chouraria via jghoman) 
  